--- a/votes/index.html
+++ b/votes/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>استبيان حول مشروع اللائحة الليبية للتصميم الشامل</h1>
-    <form action="https://formspree.io/f/3bdusalam@gmail.com" method="POST">
+    <form action="https://formspree.io/f/mldekvkk"/3bdusalam@gmail.com" method="POST">
         <!-- السؤال 1 -->
         <label for="awareness">1. هل كنت على علم بإطلاق مشروع اللائحة الليبية للتصميم الشامل؟</label><br>
         <input type="radio" id="aware_yes" name="awareness" value="نعم">
