--- a/votes/index.html
+++ b/votes/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>اتصل بنا</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', 'Tahoma', sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
             margin: 0;
             background-color: #f0f0f0;
+            direction: rtl;
+            text-align: right;
         }
         form {
             background: white;
@@ -41,10 +43,22 @@
         input[type="submit"]:hover {
             background-color: #45a049;
         }
+        .captcha {
+            margin: 10px 0;
+        }
+        footer {
+            text-align: center;
+            padding: 10px;
+            background-color: #333;
+            color: white;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
     </style>
 </head>
 <body>
-    <form action="mailto:your-email@example.com" method="POST" enctype="text/plain">
+    <form action="mailto:3bdusalam@gmail.com" method="POST" enctype="text/plain" onsubmit="thankYouMessage()">
         <label for="name">الاسم:</label>
         <input type="text" id="name" name="name" required>
 
@@ -57,7 +71,23 @@
         <label for="message">الرسالة:</label>
         <textarea id="message" name="message" rows="5" required></textarea>
 
+        <div class="captcha">
+            <label for="captcha">أدخل الكلمة الصورة:</label>
+            <img src="captcha.jpg" alt="كابتشا">
+            <input type="text" id="captcha" name="captcha" required>
+        </div>
+
         <input type="submit" value="إرسال">
     </form>
+
+    <footer>
+        <p>اسم الموقع - <a href="www.absi.cc">شليبك</a> - 2024</p>
+    </footer>
+
+    <script>
+        function thankYouMessage() {
+            alert("شكرًا لك على إرسال رسالتك!");
+        }
+    </script>
 </body>
 </html>
