--- a/votes/index.html
+++ b/votes/index.html
@@ -47,8 +47,8 @@
 </head>
 <body>
     <div class="form-container">
-        <h2> المسح الشامل</h2>
-        <form action="https://formspree.io/f/mlddglrw/3bdusalam@gmail.com" method="POST">
+        <h2>المسح الشامل</h2>
+        <form action="https://formspree.io/f/mlddglrw" method="POST">
             <label for="name">الاسم الكامل:</label>
             <input type="text" id="name" name="name" placeholder="أدخل اسمك الكامل" required>
 
