--- a/votes/index.html
+++ b/votes/index.html
@@ -48,7 +48,7 @@
 <body>
     <div class="form-container">
         <h2>المسح الشامل</h2>
-        <form action="https://formspree.io/f/mlddglrw" method="POST" enctype="multipart/form-data">
+        <form action="https://formspree.io/f/xlddgwdd" method="POST" enctype="multipart/form-data">
             <label for="name">الاسم الكامل:</label>
             <input type="text" id="name" name="name" placeholder="أدخل اسمك الكامل" required>
 
