--- a/me/index.html
+++ b/me/index.html
@@ -410,7 +410,7 @@
     
     <footer>
         <div class="footer-content">
-            <p>جميع الحقوق محفوظة © <span id="currentYear"></span></p>
+            <p>عبدالسلام شليبك © <span id="currentYear"></span></p>
             <div class="footer-links">
                 <a href="https://www.absi.cc/p/blog-page_5.html">اتصل بنا</a>
                 <a href="https://www.absi.cc/">مدونة </a>
