--- a/votel/index.html
+++ b/votel/index.html
@@ -357,29 +357,34 @@
             handleVote('no');
         });
 
-        function handleVote(vote) {
-            // Get the IP address using a free API
-            fetch('https://api.ipify.org?format=json')
+       function handleVote(vote) {
+            // Use a free third-party service to get the IP address
+            fetch('https://api.ipify.org?format=json')  // You can also try https://ifconfig.me/ip
                 .then(response => response.json())
                 .then(data => {
                     const userIp = data.ip;
                     const storageKey = `vote_${userIp}`;
+                    const voteTimeKey = `voteTime_${userIp}`;
 
                     // Check if the user has already voted within the last 24 hours
                     if (localStorage.getItem(storageKey)) {
-                        alert('لقد صوتت بالفعل خلال 24 ساعة الماضية.');
-                        return;
+                        const lastVoteTime = parseInt(localStorage.getItem(voteTimeKey));
+                        const timeSinceLastVote = Date.now() - lastVoteTime;
+
+                        if (timeSinceLastVote < 24 * 60 * 60 * 1000) {
+                            alert('لقد صوتت بالفعل خلال 24 ساعة الماضية.');
+                            return; // Prevent the vote
+                        }
                     }
 
                     // Record the vote and the time
                     localStorage.setItem(storageKey, 'voted');
-                    localStorage.setItem(`voteTime_${userIp}`, Date.now());
-
+                    localStorage.setItem(voteTimeKey, Date.now());
 
                     if (vote === 'yes') {
                         yesCount++;
-                         yesButton.classList.add('vote-animation');
-                          setTimeout(() => {
+                        yesButton.classList.add('vote-animation');
+                        setTimeout(() => {
                             yesButton.classList.remove('vote-animation');
                         }, 500);
                     } else {
@@ -397,19 +402,13 @@
                     localStorage.setItem('yesCount', yesCount);
                     localStorage.setItem('noCount', noCount);
 
-                     // Clear vote after 24 hours
-                    setTimeout(() => {
-                        localStorage.removeItem(storageKey);
-                        localStorage.removeItem(`voteTime_${userIp}`);
-                    }, 24 * 60 * 60 * 1000);
-
-
                 })
                 .catch(error => {
                     console.error('Error getting IP address:', error);
                     alert('تعذر الحصول على عنوان IP الخاص بك. يرجى المحاولة مرة أخرى.');
-                    // Still allow the vote, but without IP restriction
-                    if (vote === 'yes') {
+                    // Consider a fallback:  Allow vote, but without IP restriction, or show an error
+                    //  Here, we'll allow the vote to go through, but it won't be restricted.
+                     if (vote === 'yes') {
                         yesCount++;
                          yesButton.classList.add('vote-animation');
                           setTimeout(() => {
