--- a/tabsi/index.html
+++ b/tabsi/index.html
@@ -11,7 +11,8 @@
         /* Custom styles for background image and font */
         body {
             font-family: 'Cairo', sans-serif; /* Changed to Cairo */
-            background-image: url('image_b125f3.jpg'); /* Set the uploaded image as background */
+            /* New background image URL */
+            background-image: url('https://absily.github.io/bum/images/fulls/04.jpg');
             background-size: cover; /* Cover the entire background */
             background-position: center; /* Center the background image */
             background-attachment: fixed; /* Keep background fixed when scrolling */
@@ -24,7 +25,7 @@
         }
 
         .overlay {
-            background-color: rgba(255, 255, 255, 0.9); /* Semi-transparent white overlay for content readability */
+            background-color: rgba(255, 255, 255, 0.7); /* Reduced opacity for more artistic background visibility */
             min-height: 100vh; /* Ensure overlay covers full viewport height */
             padding: 2rem 1rem; /* Padding for content */
         }
@@ -184,7 +185,7 @@
                 <div class="relative w-full md:w-1/2 lg:w-2/5 h-80 md:h-96 rounded-xl overflow-hidden shadow-2xl border-4 border-gray-300">
                     <div class="slider-container">
                         <div class="mySlides active" onclick="openModalFromSlider(this)">
-                            <img src="https://absily.github.io/assets/images/whatsapp-im-2023-06-20-at-00.04.40.png" alt="صورة لعبدالسلام مصطفى شليبك 1">
+                            <img src="https://absily.github.io/bum/images/fulls/04.jpg" alt="صورة لعبدالسلام مصطفى شليبك 1">
                         </div>
                         <div class="mySlides" onclick="openModalFromSlider(this)">
                             <img src="https://absily.github.io/assets/images/fkobo1gwqaafwad-scaled.png" alt="صورة لعبدالسلام مصطفى شليبك 2">
