--- a/tabsi/index.html
+++ b/tabsi/index.html
@@ -293,7 +293,7 @@
                         عبدالسلام مصطفى شليبك
                     </p>
                     <p class="text-lg md:text-xl mb-6 font-light italic opacity-90">
-                        قصتي في ريادة الشمولية والإلهام
+                       قصتي من هنا 
                     </p>
                     </div>
             </div>
