--- a/daytechly/index.html
+++ b/daytechly/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
@@ -202,7 +202,7 @@
                     <p>بعض التطبيقات تتطلب استخدام الفأرة، مما يشكل عائقًا لذوي الإعاقات الحركية.</p>
                 </div>
                 <div class="card">
-                    <span class="text-6xl"> subtitles_off</span>
+                    <span class="text-6xl">❓</span>
                     <h4 class="font-bold mt-4 mb-2 text-lg">محتوى مرئي بلا بدائل</h4>
                     <p>غياب النصوص البديلة للصور والترجمة النصية للفيديوهات.</p>
                 </div>
