--- a/3id2025ad/index.html
+++ b/3id2025ad/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
@@ -56,7 +56,6 @@
             color: inherit;
         }
 
-
         /* لضمان أن الصورة لن تتجاوز حجم الشاشة الأبوية على أي حال */
         .magazine-image img {
             max-width: 100%;
@@ -74,96 +73,6 @@
         .magazine-container {
             transition: all 0.3s ease-in-out;
             flex-shrink: 0; /* منع الحاوية من التقلص */
-        }
-
-        /* تنسيق الأزرار الجديدة */
-        .gemini-button {
-            background-color: #4CAF50; /* لون أخضر */
-            color: white;
-            padding: 0.75rem 1.5rem;
-            border-radius: 9999px; /* حواف دائرية بالكامل */
-            font-weight: 600;
-            cursor: pointer;
-            transition: background-color 0.3s ease, transform 0.2s ease;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            gap: 0.5rem;
-            flex-shrink: 0; /* منع الزر من الانكماش */
-            width: 100%; /* على الجوال، الزر يملأ العرض */
-            text-align: center; /* توسيط النص داخل الزر */
-        }
-
-        .gemini-button:hover {
-            background-color: #45a049;
-            transform: translateY(-2px);
-        }
-
-        .gemini-button:active {
-            transform: translateY(0);
-        }
-
-        .input-field {
-            border: 1px solid #d1d5db;
-            border-radius: 0.5rem;
-            padding: 0.75rem 1rem;
-            width: 100%; /* تأكد من أن الحقل يملأ العرض المتاح على الجوال */
-            max-width: 300px; /* الحد الأقصى للعرض على الشاشات الكبيرة */
-            font-size: 1rem;
-            margin-bottom: 1rem; /* مسافة أسفل الحقل على الجوال */
-            text-align: right; /* محاذاة النص لليمين */
-        }
-
-        .response-box {
-            background-color: #f3f4f6;
-            border-left: 4px solid #3b82f6;
-            padding: 1rem;
-            border-radius: 0.5rem;
-            margin-top: 1.5rem;
-            color: #374151;
-            font-style: italic;
-            text-align: right; /* محاذاة النص لليمين */
-        }
-
-        .loading-spinner {
-            border: 4px solid rgba(0, 0, 0, 0.1);
-            border-top: 4px solid #3498db;
-            border-radius: 50%;
-            width: 24px;
-            height: 24px;
-            animation: spin 1s linear infinite;
-            margin-left: 0.5rem;
-            display: inline-block;
-        }
-
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-
-        /* تحسين استجابة مجموعة الإدخال والزر على الشاشات المختلفة */
-        .input-button-group {
-            display: flex; /* استخدام flexbox */
-            flex-direction: column; /* عمودي على الشاشات الصغيرة افتراضياً */
-            align-items: stretch; /* لجعل العناصر تمتد عرضياً */
-            gap: 1rem; /* مسافة بين العناصر */
-        }
-        @media (min-width: 640px) { /* sm breakpoint */
-            .input-button-group {
-                flex-direction: row; /* أفقي على الشاشات الأكبر */
-                align-items: center;
-                justify-content: center;
-                gap: 1rem; /* مسافة بين العناصر */
-            }
-            .input-field {
-                width: auto; /* السماح للعرض التلقائي عندما تكون في صف واحد */
-                flex-grow: 1; /* السماح لحقل الإدخال بالنمو لملء المساحة */
-                margin-bottom: 0; /* إزالة الهامش السفلي في التخطيط الأفقي */
-            }
-            .gemini-button {
-                width: auto; /* الزر يأخذ عرضه الطبيعي في التخطيط الأفقي */
-            }
         }
     </style>
 </head>
@@ -191,22 +100,6 @@
                 <p class="text-gray-900 mb-5">عِيدُ أَضْحى مُبَارَكٌ، نُهْدِي إلَيْكُم أَطْيَبَ التَّهَانِي وَأَصْدَقَ التَّمَنِّيَات، أَعَادَهُ اللهُ عَلَيْكُمْ بِالصِّحَّةِ وَالعَافِيَةِ، وَغَفَرَ ذُنُوبَكُمْ، وَتَقَبَّلَ طَاعَاتِكُمْ، وَجَعَلَ أَيَّامَكُمْ أَمْنًا وَسُرُورًا.</p>
                 <p class="font-semibold text-indigo-700 mt-6">تَهنِئةٌ خَالِصَةٌ مِن "مُدَوَّنَةِ عَبدِالسَّلَام مُصْطَفَى شَلِيبَك"</p>
                 <p class="mt-4">كُلُّ عَامٍ وَأَنْتُمْ إِلَى اللهِ أَقْرَبُ، وَعِيدُكُمْ سَعِيدٌ.</p>
-
-                <!-- قسم توليد التهنئة الشخصية بواسطة Gemini API -->
-                <div class="mt-10 pt-8 border-t-2 border-dashed border-gray-200">
-                    <h3 class="text-xl sm:text-2xl font-bold text-gray-900 mb-6 text-center">✨ تهنئة عيد الأضحى المخصصة لك ✨</h3>
-                    <div class="input-button-group">
-                        <input type="text" id="nameInput" placeholder="أدخل اسمك هنا" class="input-field" aria-label="أدخل اسمك لتوليد التهنئة">
-                        <button id="generateGreetingBtn" class="gemini-button">
-                            توليد التهنئة ✨
-                            <span id="loadingSpinner" class="loading-spinner hidden"></span>
-                        </button>
-                    </div>
-                    <div id="greetingOutput" class="response-box hidden" role="alert">
-                        <!-- مكان عرض التهنئة المولدة -->
-                        ستظهر تهنئتك هنا...
-                    </div>
-                </div>
             </div>
         </main>
 
@@ -215,73 +108,5 @@
             جميع الحقوق محفوظة &copy; 2025
         </footer>
     </div>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const nameInput = document.getElementById('nameInput');
-            const generateGreetingBtn = document.getElementById('generateGreetingBtn');
-            const greetingOutput = document.getElementById('greetingOutput');
-            const loadingSpinner = document.getElementById('loadingSpinner');
-
-            // دالة لجلب التهنئة من نموذج Gemini API
-            async function generateEidGreeting(name) {
-                loadingSpinner.classList.remove('hidden'); // إظهار مؤشر التحميل
-                greetingOutput.classList.add('hidden'); // إخفاء مربع النتيجة مؤقتًا
-                greetingOutput.textContent = 'جاري توليد تهنئتك...'; // رسالة انتظار
-
-                let chatHistory = [];
-                // بناء البرومبت (الطلب) لنموذج اللغة
-                const prompt = `اكتب تهنئة عيد أضحى قصيرة ومؤثرة باللغة العربية لشخص اسمه "${name}". اجعلها مليئة بالمشاعر الإيجابية وتمنيات الخير للعيد.`;
-                chatHistory.push({ role: "user", parts: [{ text: prompt }] });
-
-                const payload = { contents: chatHistory };
-                const apiKey = ""; // سيتم توفير مفتاح API تلقائيًا في بيئة Canvas
-                const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${apiKey}`;
-
-                try {
-                    const response = await fetch(apiUrl, {
-                        method: 'POST',
-                        headers: { 'Content-Type': 'application/json' },
-                        body: JSON.stringify(payload)
-                    });
-
-                    if (!response.ok) {
-                        const errorData = await response.json();
-                        throw new Error(`API error: ${response.status} - ${errorData.error.message || 'Unknown error'}`);
-                    }
-
-                    const result = await response.json();
-
-                    if (result.candidates && result.candidates.length > 0 &&
-                        result.candidates[0].content && result.candidates[0].content.parts &&
-                        result.candidates[0].content.parts.length > 0) {
-                        const text = result.candidates[0].content.parts[0].text;
-                        greetingOutput.textContent = text;
-                        greetingOutput.classList.remove('hidden'); // إظهار مربع النتيجة
-                    } else {
-                        greetingOutput.textContent = 'عذراً، لم أتمكن من توليد التهنئة. يرجى المحاولة مرة أخرى.';
-                        greetingOutput.classList.remove('hidden');
-                    }
-                } catch (error) {
-                    console.error('حدث خطأ أثناء الاتصال بـ Gemini API:', error);
-                    greetingOutput.textContent = `حدث خطأ: ${error.message}. يرجى المحاولة مرة أخرى.`;
-                    greetingOutput.classList.remove('hidden');
-                } finally {
-                    loadingSpinner.classList.add('hidden'); // إخفاء مؤشر التحميل
-                }
-            }
-
-            // إضافة مستمع الحدث لزر توليد التهنئة
-            generateGreetingBtn.addEventListener('click', () => {
-                const name = nameInput.value.trim();
-                if (name) {
-                    generateEidGreeting(name);
-                } else {
-                    greetingOutput.textContent = 'الرجاء إدخال اسم لتوليد التهنئة.';
-                    greetingOutput.classList.remove('hidden');
-                }
-            });
-        });
-    </script>
 </body>
 </html>
