--- a/usalibyaban/index.html
+++ b/usalibyaban/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
@@ -94,8 +94,8 @@
                                     <p class="text-gray-700">🛂 إلغاء صلاحية جوازات السفر الأمريكية للسفر إلى ليبيا، في إشارة قوية لتدهور العلاقات.</p>
                                 </div>
                                 <div class="timeline-item relative pb-8">
-                                    <h4 class="text-xl font-bold text-[#004FFF]">يناير 1986</h4>
-                                    <p class="text-gray-700">💸 فرض عقوبات اقتصادية شاملة وحظر كامل على التجارة والسفر، وتجميد الأصول الليبية.</p>
+                                    <h4 class="text-xl font-bold text-[#004FFF]">7 يناير 1986</h4>
+                                    <p class="text-gray-700">📜 <span class="font-bold">الأمر التنفيذي 12543:</span> أصدر الرئيس ريغان أمرًا بحالة طوارئ وطنية، فرض بموجبه حظرًا اقتصاديًا شاملاً شمل "الأنشطة المتعلقة بالسفر"، مما أدى عمليًا إلى وقف إصدار التأشيرات لليبيين.</p>
                                 </div>
                             </div>
                         </div>
@@ -137,21 +137,34 @@
             <section id="modern-bans" class="mb-16">
                  <div class="bg-white rounded-xl shadow-lg p-6 md:p-8">
                     <h2 class="text-3xl font-bold text-center text-[#004FFF] mb-8">العصر الحديث: عودة سياسات الحظر</h2>
-                    <p class="max-w-3xl mx-auto text-center text-lg text-gray-700 mb-8">عادت قيود السفر مرة أخرى في عهد إدارة الرئيس ترامب، ثم أُلغيت في عهد الرئيس بايدن، لتعود مجددًا في يونيو 2025، مما يوضح الطبيعة المتقلبة للسياسات.</p>
-                    <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
-                        <div class="chart-container h-[400px] md:h-auto">
-                            <canvas id="bansComparisonChart"></canvas>
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-start">
+                        <div>
+                            <h3 class="text-2xl font-bold mb-3">تسلسل زمني للقرارات</h3>
+                             <div class="relative pr-8 mt-4">
+                                <div class="timeline-line"></div>
+                                <div class="timeline-item relative pb-8">
+                                    <h4 class="text-xl font-bold text-[#004FFF]">21 يناير 2016</h4>
+                                    <p class="text-gray-700">⚖️ بموجب قانون منع السفر الإرهابي، صُنفت ليبيا "دولة محل قلق"، مما عطل الإعفاء من التأشيرة للقادمين منها.</p>
+                                </div>
+                                <div class="timeline-item relative pb-8">
+                                    <h4 class="text-xl font-bold text-[#004FFF]">2017</h4>
+                                    <p class="text-gray-700">🚫 الرئيس ترامب يصدر أمرًا تنفيذيًا يحظر دخول مواطني 7 دول من بينها ليبيا.</p>
+                                </div>
+                                 <div class="timeline-item relative pb-8">
+                                    <h4 class="text-xl font-bold text-[#004FFF]">2021</h4>
+                                    <p class="text-gray-700">✅ الرئيس بايدن يلغي الحظر المفروض من الإدارة السابقة.</p>
+                                </div>
+                                <div class="timeline-item relative pb-8">
+                                    <h4 class="text-xl font-bold text-[#004FFF]">4 يونيو 2025</h4>
+                                    <p class="text-gray-700">🚫 الرئيس ترامب يصدر قرارًا رئاسيًا جديدًا يعلق دخول مواطني ليبيا (مهاجرين وغير مهاجرين) اعتبارًا من 9 يونيو، بسبب مخاطر أمنية وإخفاق في توثيق جوازات السفر.</p>
+                                </div>
+                            </div>
                         </div>
                          <div>
                             <h3 class="text-2xl font-bold mb-4">مقارنة نطاق الحظر</h3>
                             <p class="text-gray-600 mb-6">يُظهر الرسم البياني اتساع نطاق الحظر الأخير (2025) مقارنة بالحظر الأول (2017). الرقم يمثل عدد الدول المشمولة بالكامل في كل قرار.</p>
-                            <div class="bg-blue-50 p-4 rounded-lg border-l-4 border-[#004FFF]">
-                                <h4 class="font-bold text-lg">نقاط رئيسية:</h4>
-                                <ul class="list-disc list-inside mt-2 text-gray-700">
-                                    <li><span class="font-bold">2017:</span> الحظر استهدف 7 دول في البداية.</li>
-                                    <li><span class="font-bold">2021:</span> الرئيس بايدن يلغي الحظر.</li>
-                                    <li><span class="font-bold">2025:</span> حظر جديد وأوسع يشمل 12 دولة.</li>
-                                </ul>
+                            <div class="chart-container h-[300px] md:h-auto">
+                                <canvas id="bansComparisonChart"></canvas>
                             </div>
                         </div>
                     </div>
