--- a/usalibyaban/index.html
+++ b/usalibyaban/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>انفوجرافيك: تاريخ قيود السفر الأمريكية على ليبيا</title>
+
+    <!-- Open Graph Meta Tags for Social Media Sharing -->
+    <meta property="og:title" content="انفوجرافيك: تاريخ قيود السفر الأمريكية على ليبيا">
+    <meta property="og:description" content="نظرة تاريخية مرئية على قرارات حظر السفر الأمريكية التي أثرت على المواطنين الليبيين، من حقبة ريغان إلى يومنا هذا.">
+    <meta property="og:image" content="https://absily.github.io/usalibya.png">
+    <meta property="og:url" content="http://www.absi.cc">
+    <meta property="og:type" content="article">
+    <meta name="twitter:card" content="summary_large_image">
+    <!-- End of Open Graph Meta Tags -->
+
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
