--- a/usalibyaban/index.html
+++ b/usalibyaban/index.html
@@ -105,7 +105,7 @@
                                 </div>
                                 <div class="timeline-item relative pb-8">
                                     <h4 class="text-xl font-bold text-[#004FFF]">7 يناير 1986</h4>
-                                    <p class="text-gray-700">📜 <span class="font-bold">الأمر التنفيذي 12543:</span> أصدر الرئيس ريغان أمرًا بحالة طوارئ وطنية، فرض بموجبه حظرًا اقتصاديًا شاملاً شمل "الأنشطة المتعلقة بالسفر"، مما أدى عمليًا إلى وقف إصدار التأشيرات لليبيين.</p>
+                                    <p class="text-gray-700">📜 <span class="font-bold"><a href="https://www.reaganlibrary.gov/archives/speech/executive-order-12543-prohibiting-trade-and-certain-transactions-involving-libya" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">الأمر التنفيذي 12543</a>:</span> أصدر الرئيس ريغان أمرًا بحالة طوارئ وطنية، فرض بموجبه حظرًا اقتصاديًا شاملاً شمل "الأنشطة المتعلقة بالسفر"، مما أدى عمليًا إلى وقف إصدار التأشيرات لليبيين.</p>
                                 </div>
                             </div>
                         </div>
